# gitoma

./: .env.example  .gitignore  CHANGELOG.md  README.md  mypy_output.txt  mypy_output_2.txt  pyproject.toml
.github/workflows/: docs.yml
deploy/: README.md  deploy-to-minimac.sh  minimac
docs/: index.md  package-lock.json  package.json
docs/.vitepress/: config.ts
docs/.vitepress/theme/: custom.css
docs/api/: auth.md  mcp.md  rest.md  streaming.md
docs/architecture/: contributing.md  critic-stack.md  overview.md  pipeline-map.md  pipeline.md  security.md
docs/guide/: cli.md  cockpit.md  configuration.md  index.md  install.md  observability.md  occam-observer.md  prerequisites.md  quickstart.md
gitoma/: __init__.py  cli.py
gitoma.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
gitoma/analyzers/: base.py  build.py  ci.py  code_quality.py  deps.py  docs.py  license.py  readme.py  registry.py  security.py  structure.py  test_runner.py  tests.py
gitoma/api/: routers.py  server.py  web.py
gitoma/cli/: __init__.py  _app.py  _doctor_helpers.py  _helpers.py  diary.py
gitoma/cli/commands/: __init__.py  _vertical.py  analyze.py  config_cmd.py  docs.py  doctor.py  fix_ci.py  gitignore.py  list_cmd.py  logs.py  mcp.py  reset.py  review.py  run.py  sandbox.py  scaffold.py  serve.py  status.py
gitoma/context/: __init__.py  occam_client.py  repo_brief.py
gitoma/core/: config.py  github_client.py  repo.py  sandbox.py  state.py  telemetry.py  trace.py
gitoma/cpg/: __init__.py  _base.py  blast_radius.py  diff.py  go_indexer.py  javascript_indexer.py  python_indexer.py  queries.py  rust_indexer.py  skeletal.py  storage.py  typescript_indexer.py
gitoma/critic/: __init__.py  antislop.py  axioms.py  devil.py  meta.py  panel.py  personas.py  qa.py  refiner.py  test_gen.py  test_gen_prompts.py  types.py
gitoma/integrations/: __init__.py  layer0.py  occam_gitignore.py  occam_trees.py  semgrep_scan.py  trivy_scan.py
gitoma/integrations/_layer0_proto/: supermemory_pb2.py  supermemory_pb2_grpc.py
gitoma/mcp/: __init__.py  cache.py  server.py
gitoma/planner/: llm_client.py  occam_filter.py  plan_loader.py  planner.py  prompts.py  real_bug_filter.py  scaffold_shape.py  scope_filter.py  task.py  test_to_source.py
gitoma/pr/: __init__.py  pr_agent.py  templates.py
gitoma/review/: integrator.py  observer.py  reflexion.py  reporter.py  self_critic.py  watcher.py
gitoma/ui/: console.py  panels.py  tui.py  tui_styles.tcss
gitoma/ui/assets/: dashboard.css  dashboard.js  dashboard_body.html  dashboard_icons.html
gitoma/verticals/: __init__.py  _base.py  docs.py  quality.py
gitoma/worker/: committer.py  config_grounding.py  config_keys.py  config_structure.py  config_syntax.py  content_grounding.py  doc_preservation.py  orphan_check.py  patcher.py  psi_delta_i.py  psi_phi.py  psi_score.py  schema_validator.py  semgrep_regression.py  sibling_config.py  trivy_regression.py  url_grounding.py  worker.py
scripts/ops/: audit-secrets.sh  rotate-claude-config.sh  rotate-diary-token.sh
tests/: conftest.py  test_antislop.py  test_api_industrial.py  test_axioms.py  test_build_analyzer.py  test_chat_max_tokens_override.py  test_ci_watch.py  test_cli_errors.py  test_config_grounding.py  test_config_review_ensemble.py  test_config_syntax.py  test_content_grounding.py  test_core_units.py  test_critic_panel.py  test_detect_failing_tests.py  test_determinism_pins.py  test_diary.py  test_doc_preservation.py  test_docs_analyzer.py  test_g14_fenced_json.py  test_g21_semgrep_regression.py  test_g22_trivy_regression.py  test_g23_config_keys.py  test_g24_config_structure.py  test_gitignore_integration.py  test_heartbeat.py  test_layer0_client.py  test_llm_health.py  test_llm_json_repair.py  test_llm_no_think.py  test_llm_no_think_prelude.py  test_llm_reviewer_ensemble.py  test_llm_worker_route.py  test_mcp_write_tools.py  test_occam_client.py  test_occam_filter.py  test_occam_trees.py  test_orphan_check.py  test_patcher_ast_diff.py  test_patcher_compile_fix.py  (+37 more)
tests/bench/: antislop_harness.py  test_antislop_bench.py  test_devil_synthetic.py  test_refiner_synthetic.py
tests/bench/cpg_lite_v0/: index_demo.py  index_demo_output.txt
tests/bench/cpg_lite_v05_expansion/: index_demo.py  index_demo_output.txt
tests/bench/cpg_lite_v05_slim/: index_demo.py  index_demo_output.txt
tests/bench/end_to_end_session_baseline/: results.md  results_evening_path_a.md
tests/bench/psi_full_v1/: replay.py  replay_results.txt
tests/bench/skeletal_v1/: render_demo.py  render_demo_output.txt
tests/cpg/: test_base.py  test_blast_radius.py  test_diff.py  test_go_indexer.py  test_index_gitoma_self.py  test_init.py  test_javascript_indexer.py  test_mixed_build.py  test_python_indexer.py  test_queries.py  test_queries_typescript.py  test_rust_indexer.py  test_skeletal.py  test_storage.py  test_typescript_indexer.py  test_worker_integration.py
tests/e2e/: test_api.py  test_api_commands.py  test_api_lifecycle.py  test_api_stream.py  test_draconian_baseline.py  test_heartbeat_draconian.py  test_web_ui.py
tests/e2e_cockpit/: conftest.py  test_api_coverage.py  test_contract.py  test_hardening.py  test_live_flows.py  test_protocol.py  test_runtime.py  test_smoke.py  test_surface.py  test_ui_flows.py
tests/fixtures/: slop_audit_b2v_pr10.json  slop_audit_b2v_pr12.json
tests/fixtures/antislop_bench/: cases.json  cases_v2_adversarial.json
